# SeatShuffler

./: .$SeatShuffler.drawio.bkp  .gitignore  CMakeLists.txt  LICENSE  README.md  app.rc  main.cpp
src/engine/: ShuffleEngine.cpp  ShuffleEngine.h
src/models/: Classroom.h  PersonGroup.h  Rule.h  ShuffleRecord.h
src/storage/: DataManager.cpp  DataManager.h
src/ui/common/: Appstyle.h  Common.h
src/ui/page/: ClassroomEditorPage.cpp  ClassroomEditorPage.h  ClassroomListPage.cpp  ClassroomListPage.h  HistoryDetailPage.cpp  HistoryDetailPage.h  HistoryPage.cpp  HistoryPage.h  MainWindow.cpp  MainWindow.h  PersonGroupDetailPage.cpp  PersonGroupDetailPage.h  PersonGroupListPage.cpp  PersonGroupListPage.h  RuleEditorPage.cpp  RuleEditorPage.h  RuleListPage.cpp  RuleListPage.h  ShufflePage.cpp  ShufflePage.h
src/ui/widgets/: ClassroomGridWidget.cpp  ClassroomGridWidget.h  ResultGridWidget.cpp  ResultGridWidget.h  SeatRuleGridWidget.cpp  SeatRuleGridWidget.h
